kqed_dev4/src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Annual Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Fulfilled</fullName>
        </values>
        <values>
            <fullName>Partially Collected</fullName>
        </values>
        <values>
            <fullName>Partially Fulfilled</fullName>
        </values>
        <values>
            <fullName>Pledged</fullName>
        </values>
        <values>
            <fullName>Solicitation%2FProposal</fullName>
        </values>
        <values>
            <fullName>Uncollectible</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Corp Support Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Id%2E Decision Makers</fullName>
        </values>
        <values>
            <fullName>Intention%2FPerception Analysis</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Donation Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cultivation</fullName>
        </values>
        <values>
            <fullName>Estate in Probate</fullName>
        </values>
        <values>
            <fullName>Fulfilled</fullName>
        </values>
        <values>
            <fullName>Intention</fullName>
        </values>
        <values>
            <fullName>Partially Collected</fullName>
        </values>
        <values>
            <fullName>Partially Fulfilled</fullName>
        </values>
        <values>
            <fullName>Pledged</fullName>
        </values>
        <values>
            <fullName>Research%2FStrategy</fullName>
        </values>
        <values>
            <fullName>Solicitation%2FProposal</fullName>
        </values>
        <values>
            <fullName>Uncollectible</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Inkind Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Fulfilled</fullName>
        </values>
        <values>
            <fullName>Partially Collected</fullName>
        </values>
        <values>
            <fullName>Partially Fulfilled</fullName>
        </values>
        <values>
            <fullName>Pledged</fullName>
        </values>
        <values>
            <fullName>Solicitation%2FProposal</fullName>
        </values>
        <values>
            <fullName>Uncollectible</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Moves Management</fullName>
        <description>Defines the Sales Process for Moves Managment</description>
        <isActive>true</isActive>
        <values>
            <fullName>Cultivation</fullName>
        </values>
        <values>
            <fullName>Gave Gift</fullName>
        </values>
        <values>
            <fullName>Identification</fullName>
        </values>
        <values>
            <fullName>Intention</fullName>
        </values>
        <values>
            <fullName>Pending Gift</fullName>
        </values>
        <values>
            <fullName>Pledged</fullName>
        </values>
        <values>
            <fullName>Research</fullName>
        </values>
        <values>
            <fullName>Solicitation%2FProposal</fullName>
        </values>
        <values>
            <fullName>Stewardship</fullName>
        </values>
        <values>
            <fullName>Verbal Commitment</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Purchase Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cultivation</fullName>
        </values>
        <values>
            <fullName>Estate in Probate</fullName>
        </values>
        <values>
            <fullName>Fulfilled</fullName>
        </values>
        <values>
            <fullName>Intention</fullName>
        </values>
        <values>
            <fullName>Partially Collected</fullName>
        </values>
        <values>
            <fullName>Partially Fulfilled</fullName>
        </values>
        <values>
            <fullName>Pledged</fullName>
        </values>
        <values>
            <fullName>Research%2FStrategy</fullName>
        </values>
        <values>
            <fullName>Solicitation%2FProposal</fullName>
        </values>
        <values>
            <fullName>Uncollectible</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ACT_ID__c</fullName>
        <externalId>true</externalId>
        <label>ACT ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ack_Sent_Date__c</fullName>
        <inlineHelpText>Date the acknowledgment for this gift was sent.</inlineHelpText>
        <label>Ack Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ack_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox that the acknowledgment for this pledge/payment has been sent to the donor.</description>
        <inlineHelpText>If checked, the acknowledgment has been sent to the donor.</inlineHelpText>
        <label>Ack Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Anonymous__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anonymous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ask_Readiness__c</fullName>
        <label>Ask Readiness</label>
        <picklist>
            <picklistValues>
                <fullName>Hot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Benefit_Counts__c</fullName>
        <label>Benefit Counts</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.IsBenefit__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CC_EFT_Alias__c</fullName>
        <label>CC &amp; EFT Alias</label>
        <referenceTo>CC_Alias__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <label>Campaign Name</label>
        <picklist>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Kind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restricted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Underwriting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Type__c</fullName>
        <label>Campaign Type</label>
        <picklist>
            <picklistValues>
                <fullName>Annual Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Kind Gifts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Gifts Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matching Gifts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Programming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Realty Perks Donations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Underwriting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation Giving</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Charge_Card_Type__c</fullName>
        <label>Charge Card Type</label>
        <picklist>
            <controllingField>payment_method__c</controllingField>
            <picklistValues>
                <fullName>Mastercard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VISA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Express</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Close_Month__c</fullName>
        <formula>CASE(
MONTH( CloseDate ) ,
1, &quot;05 January&quot;,
2, &quot;06 February&quot;,
3, &quot;07 March&quot;,
4, &quot;08 April&quot;,
5, &quot;09 May&quot;,
6, &quot;10 June&quot;,
7, &quot;11 July&quot;,
8, &quot;12 August&quot;,
9, &quot;01 September&quot;,
10, &quot;02 October&quot;,
11, &quot;03 November&quot;,
12, &quot;04  December&quot;,
&quot;Invalid month&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Reasons__c</fullName>
        <label>Closed Lost Reasons</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Cannot Afford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hung Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Commit / Won&apos;t Specify $</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supports other non-profits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Programming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cable (watching/paying)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Didn&apos;t get premium/response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deceased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unemployed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refuses all telemarketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moving out of area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t receive signal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supports Auction only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other/Misc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change AD to RN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gave Already</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget Cut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Too Expensive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Copy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rates/Cost/No Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reach/Frequency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign delayed/cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audience Alignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not enough bonus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV Ratings</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CombinedRollupFieldset__c</fullName>
        <description>Concatenated fields used during rollups to locate the most recent opportunity.</description>
        <formula>TEXT(CloseDate) + &apos;;|;&apos;+ TEXT(Amount)</formula>
        <inlineHelpText>Concatenated fields used during rollups to locate the most recent opportunity.</inlineHelpText>
        <label>Combined Rollup Fieldset</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <label>Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Id_for_Role__c</fullName>
        <inlineHelpText>Hidden field for passing a Contact Id for Contact Role creation.</inlineHelpText>
        <label>Contact Id for Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s) - DEPRECATED</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Year_Amount__c</fullName>
        <formula>IF( YEAR( CloseDate ) = YEAR(TODAY()) , Amount  , 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Year Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status- DEPRECATED</label>
        <picklist>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yet to begin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expected_vs_Actual__c</fullName>
        <formula>Stretch_Amount__c -  Giving_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected vs Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FonalityUAE__Days_since_contacted__c</fullName>
        <label>Days since contacted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FonalityUAE__Days_since_created__c</fullName>
        <label>Days since created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FonalityUAE__Days_to_close__c</fullName>
        <label>Days to close</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FonalityUAE__First_Contact_Time_any__c</fullName>
        <inlineHelpText>The time when the first contact is made for this opportunity</inlineHelpText>
        <label>1st Contact Time (any)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FonalityUAE__First_Contact_Time_phone__c</fullName>
        <inlineHelpText>The time when the first phone call is made for this opportunity</inlineHelpText>
        <label>1st Contact Time (phone)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FonalityUAE__Last_Contact_Date__c</fullName>
        <label>Last Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FonalityUAE__Second_Contact_Time_any__c</fullName>
        <inlineHelpText>The time when the second contact is made for this opportunity</inlineHelpText>
        <label>2nd Contact Time (any)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FonalityUAE__Second_Contact_Time_phone__c</fullName>
        <inlineHelpText>The time when the second phone call is made for this opportunity</inlineHelpText>
        <label>2nd Contact Time (phone)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FonalityUAE__Third_Contact_Time_any__c</fullName>
        <inlineHelpText>The time when the third contact for this opportunity</inlineHelpText>
        <label>3rd Contact Time (any)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FonalityUAE__Third_Contact_Time_phone__c</fullName>
        <inlineHelpText>The time when the third phone call is made for this opportunity</inlineHelpText>
        <label>3nd Contact Time (phone)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FonalityUAE__first_contact_data_any__c</fullName>
        <label>1st contact data (any)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FonalityUAE__first_contact_data_phone__c</fullName>
        <label>1st contact data (phone)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FonalityUAE__hours_to_first_contact_any__c</fullName>
        <inlineHelpText>This shows the hours taken from the time this opportunity is created to the first contact time, considering business hours. (e.g, if the opportunity was created on Monday 5 PM and first contacted on Tuesday 10 AM, hours to first contact is 1 hour)</inlineHelpText>
        <label>Hrs to 1st contact (any)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FonalityUAE__hours_to_first_contact_phone__c</fullName>
        <inlineHelpText>This shows the hours taken from the time this opportunity is created to the first phone call, considering business hours. (e.g, if the opportunity was created on Monday 5 PM and first contacted on Tuesday 10 AM, hours to first contact is 1 hour)</inlineHelpText>
        <label>Hrs to 1st contact (phone)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FonalityUAE__hours_to_second_contact_any__c</fullName>
        <inlineHelpText>This shows the hours taken from the time this opportunity  is created to the second contact time, considering business hours. (e.g, if the opportunity was created on Monday 5 PM and contacted on Tuesday 10 AM, hours to second contact is 1 hour)</inlineHelpText>
        <label>Hrs to 2nd contact (any)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FonalityUAE__hours_to_second_contact_phone__c</fullName>
        <inlineHelpText>This shows the hours taken from the time this opportunity is created to the second phone call, considering business hours. (e.g, if the opportunity was created on Monday 5 PM and contacted on Tuesday 10 AM, hours to second contact is 1 hour)</inlineHelpText>
        <label>Hrs to 2nd contact (phone)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FonalityUAE__hours_to_third_contact_any__c</fullName>
        <inlineHelpText>This shows the hours taken from the time this opportunity is created to the third contact time, considering business hours. (e.g, if the opportunity was created on Monday 5 PM and contacted on Tuesday 10 AM, hours to third contact is 1 hour)</inlineHelpText>
        <label>Hrs to 3rd contact (any)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FonalityUAE__hours_to_third_contact_phone__c</fullName>
        <inlineHelpText>This shows the hours taken from the time this opportunity is created to the third phone call, considering business hours. (e.g, if the opportunity was created on Monday 5 PM and contacted on Tuesday 10 AM, hours to third contact is 1 hour)</inlineHelpText>
        <label>Hrs to 3rd contact (phone)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FonalityUAE__second_contact_data_any__c</fullName>
        <label>2nd contact data (any)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FonalityUAE__second_contact_data_phone__c</fullName>
        <label>2nd contact data (phone)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FonalityUAE__third_contact_data_any__c</fullName>
        <label>3rd contact data (any)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FonalityUAE__third_contact_data_phone__c</fullName>
        <label>3rd contact data (phone)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Foundation_Name__c</fullName>
        <label>Foundation Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Foundation_Pay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Foundation Pay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fund_Lookup__c</fullName>
        <label>Fund</label>
        <referenceTo>Fund__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gift_Date_18_Month__c</fullName>
        <label>Gift Date 18 Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gift_Date_3_Month__c</fullName>
        <label>Gift Date 3 Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gift_Date_6_Month__c</fullName>
        <label>Gift Date 6 Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gift_Date_Time__c</fullName>
        <inlineHelpText>To be populated by vendor file procesing. this field will not be available for users to populate information.</inlineHelpText>
        <label>Gift Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Giveaway__c</fullName>
        <label>Giveaway?</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Giveaway_mirror__c</field>
            <operation>equals</operation>
            <value>YES</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Giveaway_mirror__c</fullName>
        <label>Giveaway? (mirror)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Giving_Amount__c</fullName>
        <label>Giving Amount</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Giving_Segment__c</fullName>
        <label>Giving Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Auction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endowment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Donor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Murrow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Murrow Society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-Air Pledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ralph Lowell Society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restricted Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustainer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Donation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual, Archangel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual, Basic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual, Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual, Hundred Level (AH)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual, Hundred Level (CH)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual, Major Donor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual, Mid-Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual, On-Air</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual, Unrestricted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual, Angel Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bequests</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Installment_Period__c</fullName>
        <label>Installment Period</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Irregular Installment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Installments__c</fullName>
        <label># of Installments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inventory_Status__c</fullName>
        <formula>IF( Shipment_Status__c = &quot;Shipped&quot;, &quot;Shipped&quot;,
IF( AND( Num_Inv_Stat_Partial__c = 0,  Num_Inv_Stat_Available__c = 0 ), &quot;Unavailable&quot;,
IF( AND( Num_Inv_Stat_Partial__c = 0, Num_Inv_Stat_Unavailable__c = 0 ), &quot;Available&quot;,
&quot;Partially Available&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inventory Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Payment_Date_18_Month__c</fullName>
        <label>Last Payment Date 18 Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Payment_Date_1_Year__c</fullName>
        <label>Last Payment Date 1 Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Payment_Date__c</fullName>
        <label>Last Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s) - DEPRECATED</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matching_Company__c</fullName>
        <label>Matching Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Giving (Matching Company)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Matching_Gift_Status__c</fullName>
        <label>Matching Gift Status</label>
        <picklist>
            <picklistValues>
                <fullName>Form Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unfullfilled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Matching_Gift__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Matching Gift</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Med_1_Amt__c</fullName>
        <description>The amount of the purchase for media 1</description>
        <label>Media 1 Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Med_2_Amt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Media 2 Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Med_3_Amt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Media 3 Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Balance__c</fullName>
        <formula>pledge_amount__c - payment_amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Paid_Amount__c</fullName>
        <formula>IF(IsClosed,  paid_amount__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Paid Amt $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>